force-app/main/default/objects/salesforce_account__x/salesforce_account__x.object-meta.xml
<CustomObject>
    <externalDataSource>Heroku_Postgres_DB</externalDataSource>
    <externalName>salesforce$account</externalName>
    <label>salesforce$account</label>
    <pluralLabel>salesforce$account</pluralLabel>
</CustomObject>