force-app/main/default/objects/salesforce_account__x/fields/account_code_c__c.field-meta.xml
<CustomField>
    <fullName>account_code_c__c</fullName>
    <description>account_code__c</description>
    <externalDeveloperName>account_code__c</externalDeveloperName>
    <label>account_code__c</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>