force-app/main/default/objects/salesforce_account__x/fields/accountnumber__c.field-meta.xml
<CustomField>
    <fullName>accountnumber__c</fullName>
    <description>accountnumber</description>
    <externalDeveloperName>accountnumber</externalDeveloperName>
    <label>accountnumber</label>
    <length>40</length>
    <type>Text</type>
</CustomField>