force-app/main/default/objects/salesforce_account__x/fields/accountsource__c.field-meta.xml
<CustomField>
    <fullName>accountsource__c</fullName>
    <description>accountsource</description>
    <externalDeveloperName>accountsource</externalDeveloperName>
    <label>accountsource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>