force-app/main/default/objects/salesforce_account__x/fields/active_c__c.field-meta.xml
<CustomField>
    <fullName>active_c__c</fullName>
    <description>active__c</description>
    <externalDeveloperName>active__c</externalDeveloperName>
    <label>active__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>