force-app/main/default/objects/salesforce_account__x/fields/all_email_c__c.field-meta.xml
<CustomField>
    <fullName>all_email_c__c</fullName>
    <description>all_email__c</description>
    <externalDeveloperName>all_email__c</externalDeveloperName>
    <label>all_email__c</label>
    <length>200</length>
    <type>Text</type>
</CustomField>