force-app/main/default/objects/salesforce_account__x/fields/automatch_c__c.field-meta.xml
<CustomField>
    <fullName>automatch_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>automatch__c</description>
    <externalDeveloperName>automatch__c</externalDeveloperName>
    <label>automatch__c</label>
    <type>Checkbox</type>
</CustomField>