force-app/main/default/objects/salesforce_account__x/fields/billingcity__c.field-meta.xml
<CustomField>
    <fullName>billingcity__c</fullName>
    <description>billingcity</description>
    <externalDeveloperName>billingcity</externalDeveloperName>
    <label>billingcity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>