force-app/main/default/objects/salesforce_account__x/fields/billinggeocodeaccuracy__c.field-meta.xml
<CustomField>
    <fullName>billinggeocodeaccuracy__c</fullName>
    <description>billinggeocodeaccuracy</description>
    <externalDeveloperName>billinggeocodeaccuracy</externalDeveloperName>
    <label>billinggeocodeaccuracy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>