force-app/main/default/objects/salesforce_account__x/fields/parentid__c.field-meta.xml
<CustomField>
    <fullName>parentid__c</fullName>
    <description>parentid</description>
    <externalDeveloperName>parentid</externalDeveloperName>
    <label>parentid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>